<resources>
    <string name="app_name">Lixo Zero</string>
    <string name="title_activity_navigation">Semana Lixo Zero Goiânia</string>

    <string name="title_tab_my_schedule">Minha Semana</string>
    <string name="title_tab_schedule">Programação</string>
    <string name="title_tab_feed">Feed</string>
    <string name="title_tab_info">Informações</string>

    <string name="title_card_about_the_event">Sobre a Semana do Lixo Zero</string>
    <string name="content_card_about_the_event">
        A Semana Lixo Zero é uma plataforma mobilizadora por nichos que tem como objetivo
        empoderar e trazer soluções para que a meta Lixo Zero seja alcançada
    </string>

    <string name="title_card_gols">Objetivos</string>
    <string name="content_card_gols">
        Mobilizar o maior número possível de organizações a realizar um evento Lixo Zero e
        conscientizar aquela comunidade a se tornar Lixo Zero.
    </string>

    <string name="title_card_results">Resultados</string>
    <string name="content_card_results">
        Sua última edição, em 2014, abrangeu 2 países, 4 estados e 11 cidades participantes,
        totalizando mais de 400 eventos, com a participação em fóruns, congressos,
        conferências, cursos, de mais de 22 mil pessoas, estudando a viabilidade de um mundo
        Lixo Zero.
    </string>

    <string name="title_card_about_ilzb">Instituto Lixo Zero Brasil</string>
    <string name="content_card_about_ilzb">
        O Instituto Lixo Zero Brasil é uma organização civil e sem fins lucrativos que faz parte
        do Zero Waste International Alliance. Fundado em 2010, com sede em Florianópolis, o
        instituto tem como objetivo disseminar o conceito de lixo zero e articular programas de
        conscientização nas empresas, destacando a importância da certificação, reestruturação e
        controle sobre o lixo que elas produzem.
    </string>

    <string name="title_card_about_srz">Sociedade Resíduo Zero</string>
    <string name="content_card_about_srz_zero">
        A Sociedade Resíduo Zero é um corpo formado por cidadãos, profissionais, estudantes,
        lideranças, e organizações preocupados com o impacto catastrófico dos resíduos sobre o
        ambiente e que buscam solucionar esta questão sob uma perspectiva integrada,
        transdisciplinar, justa, viável, adequada, e democrática.
    </string>

    <string name="subtitle_card_about_organization">Organização</string>
    <string name="action_card_about_organization">Visitar site</string>
    <string name="content_accessibility_cities">Nome das cidades participantes</string>
    <string name="action_card_contact_via_whatsapp">WhatsApp</string>
    <string name="subtitle_card_contact_ceo">Diretor Executivo</string>
    <string name="content_card_contact_ceo_name">Me. Eng. Civil Diógenes Aires</string>
    <string name="subtitle_card_contact_cco">Gerente de Eventos</string>
    <string name="content_card_contact_cco_name">Químico Antônio Afonso Bolognani</string>

    <string name="event_place_name">Local: %1$s</string>
    <string name="event_place_location">Local: %1$s, %2$s</string>
    <string name="event_time">Horário: %1$s %2$s</string>
    <string name="action_navigation">Ver direções</string>
    <string name="action_share">Compartilhar</string>
    <string name="share_with">Compartilhar usando</string>
    <string name="content_empty_schedule">Não temos programação para este dia</string>

    <string name="title_schedule_discovery">Descubra as atividades do dia</string>
    <string name="description_schedule_discovery">
        Toque na atividade para descobrir mais informações
    </string>

    <string name="title_event_link_discovery">Obtenha mais informações</string>
    <string name="description_event_link_discovery">
        Toque no botão flutuante para obter mais informações desta atividade
    </string>

    <string name="title_navigation_to_event_discovery">Descubra como chegar lá</string>
    <string name="description_navigation_to_event_discovery">
        Toque no ícone do menu para iniciar a navegação pela mapa até esta atividade
    </string>

    <string name="title_share_event_discovery">Compartilhe com seus amigos</string>
    <string name="description_share_event_discovery">
        Toque no ícone do menu para compartilhar esta atividade
    </string>

    <string name="message_discovery_explanation">
        O tutorial é feito para você descobrir como usar o app. Toque na área do círculo para concluir.
    </string>
</resources>
