<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout style="@style/Widget.SemanaLixoZero.CardContainer">

        <android.support.v7.widget.CardView style="@style/Widget.SemanaLixoZero.Card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/keyline_large_16dp"
                    android:text="@string/title_card_about_the_event"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:robotoTypeface="roboto_light"
                    />

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_card_about_the_event"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:robotoTypeface="roboto_light"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View style="@style/Widget.SemanaLixoZero.CardDivider" />

        <android.support.v7.widget.CardView style="@style/Widget.SemanaLixoZero.Card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/keyline_large_16dp"
                    android:text="@string/title_card_gols"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:robotoTypeface="roboto_light"
                    />

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_card_gols"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:robotoTypeface="roboto_light"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View style="@style/Widget.SemanaLixoZero.CardDivider" />

        <android.support.v7.widget.CardView style="@style/Widget.SemanaLixoZero.Card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/keyline_large_16dp"
                    android:text="@string/title_card_results"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:robotoTypeface="roboto_light"
                    />

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_card_results"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:robotoTypeface="roboto_light"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>