<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout style="@style/Widget.SemanaLixoZero.CardContainer">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPaddingLeft="@dimen/keyline_large_16dp"
            app:contentPaddingTop="@dimen/keyline_large_24dp"
            app:contentPaddingRight="@dimen/keyline_large_16dp"
            app:contentPaddingBottom="@dimen/keyline_medium_8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:paddingBottom="@dimen/keyline_medium_12dp"
                    android:text="@string/title_card_about_ilzb"
                    app:robotoTypeface="roboto_light"
                    />

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/keyline_large_16dp"
                    android:text="@string/subtitle_card_about_organization"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:robotoTypeface="roboto_light"
                    />

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:paddingBottom="@dimen/keyline_large_16dp"
                    android:text="@string/content_card_about_ilzb"
                    app:robotoTypeface="roboto_light"
                    />

                <com.devspark.robototextview.widget.RobotoButton
                    android:id="@+id/button_visit_ilzb_site"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_card_about_organization"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View style="@style/Widget.SemanaLixoZero.CardDivider" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPaddingLeft="@dimen/keyline_large_16dp"
            app:contentPaddingTop="@dimen/keyline_large_24dp"
            app:contentPaddingRight="@dimen/keyline_large_16dp"
            app:contentPaddingBottom="@dimen/keyline_medium_8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:paddingBottom="@dimen/keyline_medium_12dp"
                    android:text="@string/title_card_about_srz"
                    app:robotoTypeface="roboto_light"
                    />

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/keyline_large_16dp"
                    android:text="@string/subtitle_card_about_organization"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    app:robotoTypeface="roboto_light"
                    />

                <com.devspark.robototextview.widget.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:paddingBottom="@dimen/keyline_large_16dp"
                    android:text="@string/content_card_about_srz_zero"
                    app:robotoTypeface="roboto_light"
                    />

                <com.devspark.robototextview.widget.RobotoButton
                    android:id="@+id/button_visit_srz_site"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_card_about_organization"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>